added about.html and about.css files about page and stylesheet

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="topnav">
-    <a href="index.html">Home</a>
+    <a href="Home.html">Home</a>
     <a href="reserve.html">Reserve</a>
 </div>
 <div class="content">
