--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="topnav">
+    <b>Chez Pierre</b>
     <a href="Home.html">Home</a>
     <a href="reserve.html">Reserve</a>
 </div>
