changed filepaths to work with names in directory

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <div class="topnav">
     <b>Chez Pierre</b>
     <a href="Home.html">Home</a>
-    <a href="reserve.html">Reserve</a>
+    <a href="Reserve.html">Reserve</a>
 </div>
 <div class="content">
     <h2>About Us</h2>
