--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
 <head>
   <title> chez Sierra </title>
@@ -9,7 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-   <link rel="stylesheet" type="text/css" href="menu.css">
+   <link rel="stylesheet" type="text/css" href="Menu.css">
 </head>
 
 <body>
@@ -31,11 +31,11 @@
             <i class="bi bi-house"></i>
           </a> -->
 
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="Home.html">Home</a>
 
           <a class="nav-link" href="about.html">About</a>
 
-          <a class="nav-link" href="reserve.html">Reserve</a>
+          <a class="nav-link" href="Reserve.html">Reserve</a>
 
          
          
@@ -123,7 +123,7 @@
         <div class="Contact">
           <h6> Hours </h6>
           <p> 2PM to 12AM</p>
-          <a class="reserve-link" href="reserve.html">RESERVE NOW</a>
+          <a class="reserve-link" href="Reserve.html">RESERVE NOW</a>
         </div>
       </div>
     </div>
