--- a/Reserve.html
+++ b/Reserve.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservation Page</title>
-  <link rel="stylesheet" href="reserve.css">
+  <link rel="stylesheet" href="Reserve.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -23,8 +23,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link" href="menu.html">Menu</a>
+          <a class="nav-link" href="Home.html">Home</a>
+          <a class="nav-link" href="Menu.html">Menu</a>
           <a class="nav-link" href="about.html">About</a>
         </div>
       </div>
@@ -94,13 +94,13 @@
         <div class="Contact">
           <h6> Hours </h6>
           <p> 2PM to 12AM</p>
-          <a class="reserve-link" href="reserve.html">RESERVE NOW</a>
+          <a class="reserve-link" href="Reserve.html">RESERVE NOW</a>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="reserve.js"></script>
+  <script src="Reserve.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
