changed About to match other file names and made it so that you cant click the "chez pierre" part of the navigation bar

--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand">
         <i class="bi bi-house"></i>&nbsp;Chez Sierra
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -33,7 +33,7 @@
 
           <a class="nav-link" href="Home.html">Home</a>
 
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="About.html">About</a>
 
           <a class="nav-link" href="Reserve.html">Reserve</a>
 
