--- a/Menu.html
+++ b/Menu.html
@@ -27,7 +27,7 @@
 
           <a class="nav-link" href="index.html">Home</a>
 
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="About.html">About</a>
 
           <a class="nav-link" href="reserve.html">Reserve</a>
 
