--- a/Reserve.html
+++ b/Reserve.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand">
         <i class="bi bi-house"></i>&nbsp;Chez Sierra
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -25,7 +25,7 @@
         <div class="navbar-nav">
           <a class="nav-link" href="Home.html">Home</a>
           <a class="nav-link" href="Menu.html">Menu</a>
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="About.html">About</a>
         </div>
       </div>
     </div>
