--- a/Menu.html
+++ b/Menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
 <head>
   <title> Chez Sierra </title>
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="menu.css">
+  <link rel="stylesheet" type="text/css" href="Menu.css">
 </head>
 
 <body>
@@ -25,11 +25,11 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
 
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="Home.html">Home</a>
 
           <a class="nav-link" href="About.html">About</a>
 
-          <a class="nav-link" href="reserve.html">Reserve</a>
+          <a class="nav-link" href="Reserve.html">Reserve</a>
 
         </div>
       </div>
@@ -105,7 +105,7 @@
       <div class="column" style="background-color:black;">
         <h6>Hours</h6>
         <p>2PM to 12AM</p>
-        <a class="reserve-link" href="reserve.html">RESERVE NOW</a>
+        <a class="reserve-link" href="Reserve.html">RESERVE NOW</a>
       </div>
     </div>
   </div>
@@ -115,7 +115,7 @@
 
           <div class="container">
             <div class="row">
-              <!-- Column 1: Contact -->
+              <-- Column 1: Contact -->
   <!--
               <div class="col-lg-4">
           <p> </p>
